<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_community_black_24dp"
        android:title="@string/title_community" />

    <item
        android:id="@+id/navigation_develop"
        android:icon="@drawable/ic_develop_black_24dp"
        android:title="@string/title_develop" />

    <item
        android:id="@+id/navigation_tools"
        android:icon="@drawable/ic_tools_black_24dp"
        android:title="@string/title_tools" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_user_black_24dp"
        android:title="@string/title_user" />

</menu>